<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_pick_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:background="@android:color/transparent"
    android:paddingRight="25dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonbg"
        android:text="@string/val_date"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/time"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_time"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/buttonbg"
            android:text="@string/val_time"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/check_servedtime"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="right|center"
            tools:ignore="RtlHardcoded" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/comments"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/roundedcorner"
        android:focusableInTouchMode="true"
        android:gravity="top|left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="300"
        android:paddingTop="5dp"
         android:inputType="textCapSentences"
        android:singleLine="false"
        tools:ignore="RtlHardcoded" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>