<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/whitecolor"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/alert_message"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" >
    </TextView>

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/history"
        android:textColor="@android:color/black"
        android:textSize="15sp" >
    </TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="5dp"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/alert_yes"
        android:layout_weight=".5"
        android:textColor="#06698A"
        android:textStyle="bold"
        android:textSize="15dp"
        tools:ignore="SpUsage" />
    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_weight=".5"
        android:textColor="#06698A"
        android:text="@string/alert_no"
        android:textStyle="bold"
        android:textSize="15dp"
        tools:ignore="SpUsage" />
</LinearLayout>
</LinearLayout>