<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ph_logo"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/whitecolor"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txt_back_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|left"
            android:text="@string/attempt"
            android:textColor="@color/blackcolor"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/attachments"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center|right"
            android:text="@string/done"
            android:textColor="@color/blackcolor"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/whitecolor"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        tools:ignore="RtlHardcoded,RtlSymmetry">

        <TextView
            android:id="@+id/txt_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center|left"
            android:text="@string/edit"
            android:textColor="@color/blackcolor"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/txt_workorder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/val_work_order_id"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center|right"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <GridView
        android:id="@+id/lst_image_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/attach_transparent"
        android:horizontalSpacing="40dp"
        android:verticalSpacing="40dp" >
    </GridView>

    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="top|center_horizontal" 
        android:layout_marginTop="-50dp"
        android:background="@color/blackcolor"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <Button
            android:id="@+id/btn_attach_image" 
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/button_corner"
            android:text="@string/attachment_files"
            android:textColor="@color/blackcolor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_delete_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/redbutton"
            tools:ignore="ContentDescription" />
    </TableRow>

</LinearLayout>