<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ph_logo"
  
    android:gravity="bottom|center_horizontal"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/attach_option_butt"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonOpeninMaps"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonbg"
             android:text="@string/txtopeninmaps"
            android:textColor="@color/blackcolor"
            android:textSize="18sp"
            android:textStyle="bold" />
            <!-- android:background="@drawable/attach_option_butt" -->
           

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/buttonAddtoContacts"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/buttonbg"
            android:text="@string/txtaddtocontacts"
            android:textColor="@color/blackcolor"
            android:textSize="18sp"
            android:textStyle="bold" />
            <!-- android:background="@drawable/attach_option_butt" -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/buttonCopy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
           
            android:text="@string/txtcopy"
            android:textColor="@color/blackcolor"
            android:background="@drawable/buttonbg"
            android:textSize="18sp"
            android:textStyle="bold" />
         <!-- android:background="@drawable/attach_option_butt" -->
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@android:color/transparent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/buttonbg"
        android:text="@string/cancel"
        android:textColor="@color/blackcolor"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>